--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
       rel="stylesheet"
     />
   </head>
@@ -20,3 +20,4 @@
     <app-root></app-root>
   </body>
 </html>
+
